[tool.poetry]
name = "useful-features"
version = "0.1.0"
description = ""
authors = ["Dmitriy Bychkov <582620@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.6"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
